# ILI-Forecasting-Pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/raw/: Jewish_Israeli_holidays.csv  data_202512022119.csv
outputs/: hmm_season_summary.csv  model_comparison.csv  next_season_forecast.csv  sarimax_evaluation.csv  season_summary.csv
src/data/: __init__.py  load_data.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  build_features.py  holidays.py  school_calendar.py  southern_hemisphere.py  temperature.py
src/models/: __init__.py  baseline.py  hmm_season.py  next_season_prediction.py  sarimax_model.py
src/visualization/: __init__.py  plots.py
tests/: test_features.py
